# bitcoinr

./: Cargo.toml
bitcoin-bech32/: Cargo.toml
bitcoin-bech32/src/: constants.rs  lib.rs
bitcoin-core/: Cargo.toml
bitcoin-core/src/blockdata/: constants.rs  transaction.rs
bitcoin-core/src/consensus/: encode.rs  params.rs
bitcoin-core/src/network/: constants.rs
bitcoin-core/src/util/: address.rs  base58.rs  bip32.rs  key.rs  mod.rs
wallet/: Cargo.toml
wallet/src/: btg.rs  lib.rs
