[package]
name = "wallet"
version = "0.1.0"
authors = ["rustmann <\"moyuan25@qq.com\">"]
edition = "2018"

[dependencies]
bitcoin = {path = "../bitcoin-core"}
bitcoin_hashes = "0.3"
bitcoin-bech32 = {path="../bitcoin-bech32"}
byteorder = "1.2.6"
serde = "1"
serde_derive = "1"
serde_json = "1.0.31"
rand = "0.5"
hex = "0.3"
base64 = "0.9"
rust-crypto = "0.2.36"

[dependencies.secp256k1]
version = "0.12"
features = ["serde"]
